Fix overflow problems, add high score, add basic continue functionality.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,6 +16,7 @@
     height: 100vh;
     width: 100vw;
     background: linear-gradient(0.1turn, rgb(180, 140, 140), rgb(140, 140, 180));
+    overflow: hidden;
 }
 
 #title {
@@ -38,8 +39,7 @@
     color: rgb(252, 252, 252);
     font-size: 3rem;
     font-weight: 800;
-    padding-top: 1.4rem;
-    margin-bottom: 1rem;
+    padding-top: .4rem;
     display: flex;
     justify-content: center;
     width: 12rem;
@@ -56,6 +56,8 @@
     height: 10rem;
     margin: -15px;
     margin-left: 30vw;
+    padding-top: 1.4rem;
+    margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
     
@@ -63,7 +65,7 @@
 
 #highScore {
     color: rgb(132, 162, 202);
-    padding-top: .4rem;
+    
 }
 
 
